Small tasks improvements, add slick slider

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
     <title>Document</title>
-    <script src="./js/app.min.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
+    <script src="./js/app.min.js"></script>
+  </body>
 </html>
