Add possibility to split html files

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
     <title>Document</title>
   </head>
   <body>
+
+    @@include('header.html')
+
+
+    @@include('footer.html')
+
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
