--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <title>Document</title>
+    <title>Baza Trainee</title>
   </head>
   <body>
 
