--- a/src/html/forms.html
+++ b/src/html/forms.html
@@ -1,5 +1,5 @@
 <section class="forms">
-    <div class="section-container ">
+    <div class="container ">
     <h2 class="forms__title">Baza Trainee Ukraine запрошує приєднатись до команди</h2>
     <p class="forms__text">Оберіть свою участь в проєкті</p>
     <ul class="forms__list">
