--- a/src/html/statistic.html
+++ b/src/html/statistic.html
@@ -1,5 +1,5 @@
 <section class="statistic">
-    <div class="section-container ">
+    <div class="container ">
    
     <h3 class="statistic__title">5 проектів та 3 команди чекають на тебе</h3>
     </div>
