--- a/src/html/achievements.html
+++ b/src/html/achievements.html
@@ -1,5 +1,5 @@
 <section class="achievements">
-    <div class="section-container ">
+    <div class="container ">
     <ul class="achievements__list">
         <li class="achievements__item">
             <p class="achievements__number">7</p>
