--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,43 @@
-<footer>I'm footer</footer>
+<footer class="footer">
+	<div class="container">
+		<div class="footer__wrapper">
+			<div class="footer__section">
+						<a href="#header" class="logo"></a>
+			</div>
+	
+			<div class="footer__section">
+				<ul class="footer__list">
+					<li class="footer__list-item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
+					<li class="footer__list-item"><a href="#partners" class="footer__list-link">Партнери</a></li>
+					<li class="footer__list-item"><a href="#apply" class="footer__list-link">Взяти участь</a></li>
+				</ul>
+			</div>
+	
+			<div class="footer__section">
+				<ul class="footer__list">
+					<li class="footer__list-item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
+					<li class="footer__list-item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
+					<li class="footer__list-item"><a href="" class="footer__list-link">Статут</a></li>
+					<li class="footer__list-item"><a href="" class="footer__list-link">Звітність</a></li>
+				</ul>
+			</div>
+	
+			<div class="footer__section">
+						<ul class="footer__list">
+							<li>+38 063 628 6630</li>
+							<li>+38 067 568 1788</li>
+							<li>info@baza-trainee.site</li>
+						</ul>
+						<ul class="footer__list social">
+							<li>
+								<a href="" class="footer__social"></a>
+							</li>
+							<li>
+								<a href="" class="footer__social"></a>
+							</li>
+						</ul>
+			</div>
+		</div>
+		<p class="footer__license"> Розробка BazaTraineeUkraine 2023 Усі права захищені. </p>
+	</div>
+</footer>
