--- a/src/html/errorPage.html
+++ b/src/html/errorPage.html
@@ -3,7 +3,7 @@
     <p class="errorPage__digits">404</p>
     <h2 class="errorPage__title">Цю сторінку не знайдено</h2>
     <p class="errorPage__description">
-      Ми не могли знайти сторінку, яку Ви шукаєте. Можливо, сталася помилка
+      Ми не змогли знайти сторінку, яку Ви шукаєте. Можливо, сталася помилка
     </p>
     <a href="/" class="errorPage__back-home-link">Повернутись на голову</a>
   </div>
