--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,26 @@
-<header>I'm header</header>
+<header class="header">
+  <div class="container header__container">
+    <div class="header__logo">
+      <a href="#" class="header__logo-link">
+        <svg class="header__logo-img">
+          <use href="@img/sprite.svg#logo-black"></use>
+        </svg>
+      </a>
+    </div>
+    <ul class="header__nav">
+      <li class="header__nav-elem"><a href="#" class="header__nav-link">Проєкти</a></li>
+      <li class="header__nav-elem"><a href="#" class="header__nav-link">Партнери</a></li>
+      <li class="header__nav-elem"><a href="#" class="header__nav-link">Взяти участь</a></li>
+      <li class="header__nav-elem"><a href="#" class="header__nav-link">Контакти</a></li>
+    </ul>
+    <div class="header__lang">
+      <button class="header__lang-btn" id="active-lang">
+        UA <svg class="header__lang-arrow"><use href="@img/sprite.svg#arrow-bottom"></use></svg>
+      </button>
+      <ul class="header__lang-list" id="lang-list">
+        <li class="header__lang-elem"><button class="header__lang-btn"><span>EN</span></button></li>
+        <li class="header__lang-elem"><button class="header__lang-btn"><span>PL</span></button></li>
+      </ul>
+    </div>
+  </div>
+</header>
