--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
   
   @@include('achievements.html')
 
+  @@include('reviews.html')
+
   @@include('footer.html')
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
