--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,7 +3,11 @@
 	<div class="container">
 		<div class="footer__wrapper">
 			<div class="footer__section">
-						<a href="#header" class="logo"></a>
+						<a href="#header" class="logo">
+							<svg class="logo-svg">
+								<use href="@img/sprite.svg#logo-footer"></use>
+							</svg>
+						</a>
 			</div>
 	
 			<div class="footer__section">
@@ -24,17 +28,35 @@
 			</div>
 	
 			<div class="footer__section">
-						<ul class="footer__list">
-							<li>+38 063 628 6630</li>
-							<li>+38 067 568 1788</li>
-							<li>info@baza-trainee.site</li>
+						<ul class="footer__list footer__list-contacts">
+							<li class="footer__list-item footer__item-contacts">
+								<svg class="footer__list-item-svg">
+									<use href="@img/sprite.svg#phone"></use>
+								</svg>
+								+38 063 628 6630</li>
+							<li class="footer__list-item footer__item-contacts">
+								<svg class="footer__list-item-svg">
+									<use href="@img/sprite.svg#phone"></use>
+								</svg>+38 067 568 1788</li>
+							<li class="footer__list-item footer__item-contacts">
+								<svg class="footer__list-item-svg">
+									<use href="@img/sprite.svg#mail"></use>
+								</svg><span>info@baza-trainee.site</span></li>
 						</ul>
-						<ul class="footer__list social">
-							<li>
-								<a href="" class="footer__social"></a>
+						<ul class="footer__list footer__list-social">
+							<li class="footer__item-social">
+								<a href="" class="footer__social-link">
+									<svg class="footer__social">
+										<use href="@img/sprite.svg#linkedIn"></use>
+									</svg>
+								</a>
 							</li>
-							<li>
-								<a href="" class="footer__social"></a>
+							<li class="footer__item-social">
+								<a href="" class="footer__social-link">
+									<svg class="footer__social">
+										<use href="@img/sprite.svg#fb"></use>
+									</svg>
+								</a>
 							</li>
 						</ul>
 			</div>
