--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-  @@include('header.html')
+  <!-- @@include('header.html')
     
   @@include('slider.html')
 
@@ -28,7 +28,7 @@
   
   @@include('achievements.html')
 
-  @@include('reviews.html')
+  @@include('reviews.html') -->
 
   @@include('footer.html')
     
