--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,67 +1,74 @@
 
-<footer class="footer">
-	<div class="container">
-		<div class="footer__wrapper">
-			<div class="footer__section">
-						<a href="#header" class="logo">
-							<svg class="logo-svg">
-								<use href="@img/sprite.svg#logo-footer"></use>
-							</svg>
-						</a>
-			</div>
-	
-			<div class="footer__section">
-				<ul class="footer__list">
-					<li class="footer__list-item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
-					<li class="footer__list-item"><a href="#partners" class="footer__list-link">Партнери</a></li>
-					<li class="footer__list-item"><a href="#apply" class="footer__list-link">Взяти участь</a></li>
-				</ul>
-			</div>
-	
-			<div class="footer__section">
-				<ul class="footer__list">
-					<li class="footer__list-item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
-					<li class="footer__list-item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
-					<li class="footer__list-item"><a href="" class="footer__list-link">Статут</a></li>
-					<li class="footer__list-item"><a href="" class="footer__list-link">Звітність</a></li>
-				</ul>
-			</div>
-	
-			<div class="footer__section">
-						<ul class="footer__list footer__list-contacts">
-							<li class="footer__list-item footer__item-contacts">
-								<svg class="footer__list-item-svg">
-									<use href="@img/sprite.svg#phone"></use>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__wrapper">
+				<div class="footer__section">
+							<a href="#header" class="logo">
+								<svg class="logo-svg">
+									<use href="@img/sprite.svg#logo-footer"></use>
 								</svg>
-								+38 063 628 6630</li>
-							<li class="footer__list-item footer__item-contacts">
-								<svg class="footer__list-item-svg">
-									<use href="@img/sprite.svg#phone"></use>
-								</svg>+38 067 568 1788</li>
-							<li class="footer__list-item footer__item-contacts">
-								<svg class="footer__list-item-svg">
-									<use href="@img/sprite.svg#mail"></use>
-								</svg><span>info@baza-trainee.site</span></li>
-						</ul>
-						<ul class="footer__list footer__list-social">
-							<li class="footer__item-social">
-								<a href="" class="footer__social-link">
-									<svg class="footer__social">
-										<use href="@img/sprite.svg#linkedIn"></use>
+							</a>
+				</div>
+		
+				<div class="footer__section">
+					<ul class="footer__list">
+						<li class="footer__list-item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
+						<li class="footer__list-item"><a href="#partners" class="footer__list-link">Партнери</a></li>
+						<li class="footer__list-item"><a href="#apply" class="footer__list-link">Взяти участь</a></li>
+					</ul>
+				</div>
+		
+				<div class="footer__section">
+					<ul class="footer__list">
+						<li class="footer__list-item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
+						<li class="footer__list-item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
+						<li class="footer__list-item"><a href="" class="footer__list-link">Статут</a></li>
+						<li class="footer__list-item"><a href="" class="footer__list-link">Звітність</a></li>
+					</ul>
+				</div>
+		
+				<div class="footer__section">
+							<ul class="footer__list footer__list-contacts">
+								<li class="footer__list-item footer__item-contacts">
+									<svg class="footer__list-item-svg">
+										<use href="@img/sprite.svg#phone"></use>
 									</svg>
-								</a>
-							</li>
-							<li class="footer__item-social">
-								<a href="" class="footer__social-link">
-									<svg class="footer__social">
-										<use href="@img/sprite.svg#fb"></use>
-									</svg>
-								</a>
-							</li>
-						</ul>
+									+38 063 628 6630</li>
+								<li class="footer__list-item footer__item-contacts">
+									<svg class="footer__list-item-svg">
+										<use href="@img/sprite.svg#phone"></use>
+									</svg>+38 067 568 1788</li>
+								<li class="footer__list-item footer__item-contacts">
+									<svg class="footer__list-item-svg">
+										<use href="@img/sprite.svg#mail"></use>
+									</svg><span>info@baza-trainee.site</span></li>
+							</ul>
+							<ul class="footer__list footer__list-social">
+								<li class="footer__item-social">
+									<a href="" class="footer__social-link">
+										<svg class="footer__social">
+											<use href="@img/sprite.svg#linkedIn"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="footer__item-social">
+									<a href="" class="footer__social-link">
+										<svg class="footer__social">
+											<use href="@img/sprite.svg#fb"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+				</div>
 			</div>
+			<p class="footer__license"> Розробка BazaTraineeUkraine 2023 Усі права захищені. </p>
 		</div>
-		<p class="footer__license"> Розробка BazaTraineeUkraine 2023 Усі права захищені. </p>
-	</div>
-</footer>
+	</footer>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="./js/slick.min.js"></script>
+	<script src="./js/app.min.js"></script>
+</body>
+
+</html>
 
