hover fixed, flex fixed

--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -17,6 +17,21 @@
         <li class="partner_item">
             <a class="partner_link" href="http://"></a>
         </li >
+        <li class="partner_item">
+            <a class="partner_link" href="http://"></a>
+        </li>
+        <li class="partner_item">
+            <a class="partner_link" href="http://"></a>
+        </li>
+        <li class="partner_item">
+            <a class="partner_link" href="http://"></a>
+        </li>
+        <li class="partner_item">
+            <a class="partner_link" href="http://"></a>
+        </li>
+        <li class="partner_item">
+            <a class="partner_link" href="http://"></a>
+        </li >
     </ul>
     <button type="button" class="add_more">Більше партнерів</button>
 </div>
