--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -14,7 +14,7 @@
 					<ul class="footer__list">
 						<li class="footer__list-item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
 						<li class="footer__list-item"><a href="#partners" class="footer__list-link">Партнери</a></li>
-						<li class="footer__list-item"><a href="#apply" class="footer__list-link">Взяти участь</a></li>
+						<li class="footer__list-item"><a href="#forms" class="footer__list-link">Взяти участь</a></li>
 					</ul>
 				</div>
 		
