--- a/src/html/forms.html
+++ b/src/html/forms.html
@@ -1,4 +1,4 @@
-<section class="forms">
+<section class="forms" id="forms">
     <div class="container">
     <h2 class="forms__title">Baza Trainee Ukraine запрошує приєднатись до команди</h2>
     <p class="forms__text">Оберіть свою участь в проєкті</p>
