--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,7 +14,7 @@
     <title>Baza Trainee</title>
   </head>
 <body>
-  <header class="header">
+  <header class="header" id="header">
     <div class="container header__container">
       <div class="header__logo">
         <a href="/" class="header__logo-link">
