--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,4 +1,4 @@
-<section class="projects-section">
+<section class="projects-section" id="projects">
     <div class="container">
         <h3 class="projects-section__title">Проєкти</h3>
         <div class="projects-section__form-container">
