changed px to rem

--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -1,42 +1,44 @@
-<section class="slider_container">
-    <h3>Відгуки</h3>
-    <div class="slider">
-        <div class="slider_item">
-            <div class="slider_item_container">
-                <img src="@img/a_reviews.webp" alt="user photo">
-                <div class="user_info">
-                    <h4 class="user_name">Denis Solomko</h4>
-                    <p class="user_specialization">QA engineer</p>
+<section class="container">
+    <div class="slider_container">
+        <h3>Відгуки</h3>
+            <div class="slider">
+                <div class="slider_item">
+                    <div class="slider_item_container">
+                        <img src="@img/a_reviews.webp" alt="user photo">
+                        <div class="user_info">
+                            <h4 class="user_name">Denis Solomko</h4>
+                            <p class="user_specialization">QA engineer</p>
+                        </div>
+                        <div>
+                            <p class="user_text">“This is exactly what I needed. It was that company and the very people who helped me develop my skills and feel confident. Thank you”</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <p class="user_text">“This is exactly what I needed. It was that company and the very people who helped me develop my skills and feel confident. Thank you”</p>
+                <div class="slider_item">
+                    <div class="slider_item_container">
+                        <img src="@img/b_reviews.webp" alt="user photo">
+                        <div class="user_info">
+                            <h4 class="user_name">Iryna Korotchaeva</h4>
+                            <p class="user_specialization">UI/UX Designer</p>
+                        </div>
+                        <div>
+                            <p class="user_text">"It was very interesting to communicate with new people and share knowledge. Thank you for the experience of working in a team"</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="slider_item">
-            <div class="slider_item_container">
-                <img src="@img/b_reviews.webp" alt="user photo">
-                <div class="user_info">
-                    <h4 class="user_name">Iryna Korotchaeva</h4>
-                    <p class="user_specialization">UI/UX Designer</p>
-                </div>
-                <div>
-                    <p class="user_text">"It was very interesting to communicate with new people and share knowledge. Thank you for the experience of working in a team"</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="slider_item">
-            <div class="slider_item_container">
-                <img src="@img/c_reviews.webp" alt="user photo">
-                <div class="user_info">
-                    <h4 class="user_name">Natalia Shapoval</h4>
-                    <p class="user_specialization">Full Stack Developer</p>
-                </div>
-                <div>
-                    <p class="user_text">"Good project, good people. Grateful for new knowledge, received only positive emotions"</p>
+                <div class="slider_item">
+                    <div class="slider_item_container">
+                        <img src="@img/c_reviews.webp" alt="user photo">
+                        <div class="user_info">
+                            <h4 class="user_name">Natalia Shapoval</h4>
+                            <p class="user_specialization">Full Stack Developer</p>
+                        </div>
+                        <div>
+                            <p class="user_text">"Good project, good people. Grateful for new knowledge, received only positive emotions"</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
 </section>
