--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,8 +3,8 @@
 		<div class="container">
 			<div class="footer__wrapper">
 				<div class="footer__section">
-							<a href="#header" class="logo">
-								<svg class="logo-svg">
+							<a href="#header" class="footer__logo">
+								<svg class="footer__logo-svg">
 									<use href="@img/sprite.svg#logo-footer"></use>
 								</svg>
 							</a>
@@ -12,48 +12,53 @@
 		
 				<div class="footer__section">
 					<ul class="footer__list">
-						<li class="footer__list-item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
-						<li class="footer__list-item"><a href="#partners" class="footer__list-link">Партнери</a></li>
-						<li class="footer__list-item"><a href="#forms" class="footer__list-link">Взяти участь</a></li>
+						<li class="footer__item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
+						<li class="footer__item"><a href="#partners" class="footer__list-link">Партнери</a></li>
+						<li class="footer__item"><a href="#forms" class="footer__list-link">Взяти участь</a></li>
 					</ul>
 				</div>
 		
 				<div class="footer__section">
 					<ul class="footer__list">
-						<li class="footer__list-item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
-						<li class="footer__list-item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
-						<li class="footer__list-item"><a href="" class="footer__list-link">Статут</a></li>
-						<li class="footer__list-item"><a href="" class="footer__list-link">Звітність</a></li>
+						<li class="footer__item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
+						<li class="footer__item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
+						<li class="footer__item"><a href="" class="footer__list-link">Статут</a></li>
+						<li class="footer__item"><a href="" class="footer__list-link">Звітність</a></li>
 					</ul>
 				</div>
 		
 				<div class="footer__section">
 							<ul class="footer__list footer__list-contacts">
-								<li class="footer__list-item footer__item-contacts">
-									<svg class="footer__list-item-svg">
+								<li class="footer__item footer__item-contacts">
+									<svg class="footer__item-svg">
 										<use href="@img/sprite.svg#phone"></use>
 									</svg>
-									+38 063 628 6630</li>
-								<li class="footer__list-item footer__item-contacts">
-									<svg class="footer__list-item-svg">
+									<span class="footer__item-span">+38 063 628 6630</span>
+								</li>
+								<li class="footer__item footer__item-contacts">
+									<svg class="footer__item-svg">
 										<use href="@img/sprite.svg#phone"></use>
-									</svg>+38 067 568 1788</li>
-								<li class="footer__list-item footer__item-contacts">
-									<svg class="footer__list-item-svg">
+									</svg>
+									<span class="footer__item-span">
+										+38 067 568 1788
+									</span>
+									</li>
+								<li class="footer__item footer__item-contacts">
+									<svg class="footer__item-svg">
 										<use href="@img/sprite.svg#mail"></use>
-									</svg><span>info@baza-trainee.site</span></li>
+									</svg><span class="footer__item-span">info@baza-trainee.site</span></li>
 							</ul>
 							<ul class="footer__list footer__list-social">
 								<li class="footer__item-social">
 									<a href="" class="footer__social-link">
-										<svg class="footer__social">
+										<svg class="footer__social-link-svg">
 											<use href="@img/sprite.svg#linkedIn"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="footer__item-social">
 									<a href="" class="footer__social-link">
-										<svg class="footer__social">
+										<svg class="footer__social-link-svg">
 											<use href="@img/sprite.svg#fb"></use>
 										</svg>
 									</a>
