unit of measurement changed

--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -1,4 +1,4 @@
-<section class="partners_style">
+<section class="partner">
     <div class="container">
     <h2 class="partner_title">Партнери</h2>
     <ul class="partner_list">
@@ -33,6 +33,10 @@
             <a class="partner_link" href="http://"></a>
         </li >
     </ul>
-    <button type="button" class="add_more">Більше партнерів</button>
+    <button type="button" class="add_more">Більше партнерів
+        <svg class="header__lang-arrow">
+            <use href="@img/sprite.svg#arrow-bottom"></use>
+        </svg>
+    </button>
 </div>
 </section>
