--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -48,15 +48,16 @@
 										<use href="@img/sprite.svg#mail"></use>
 									</svg><span class="footer__item-span">info@baza-trainee.site</span></li>
 							</ul>
+
 							<ul class="footer__list footer__list-social">
-								<li class="footer__item-social">
+								<li class="footer__item-social footer__item">
 									<a href="" class="footer__social-link">
 										<svg class="footer__social-link-svg">
 											<use href="@img/sprite.svg#linkedIn"></use>
 										</svg>
 									</a>
 								</li>
-								<li class="footer__item-social">
+								<li class="footer__item-social footer__item">
 									<a href="" class="footer__social-link">
 										<svg class="footer__social-link-svg">
 											<use href="@img/sprite.svg#fb"></use>
