--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,65 +1,65 @@
 
 	<footer class="footer">
 		<div class="container">
-			<div class="footer__wrapper">
-				<div class="footer__section">
-							<a href="#header" class="footer__logo">
-								<svg class="footer__logo-svg">
+			<div class="footer-wrapper">
+				<div class="footer-section">
+							<a href="#header" class="footer-logo">
+								<svg class="footer-logo__svg">
 									<use href="@img/sprite.svg#logo-footer"></use>
 								</svg>
 							</a>
 				</div>
 		
-				<div class="footer__section">
-					<ul class="footer__list">
-						<li class="footer__item"><a href="#projects" class="footer__list-link">Проєкти</a></li>
-						<li class="footer__item"><a href="#partners" class="footer__list-link">Партнери</a></li>
-						<li class="footer__item"><a href="#forms" class="footer__list-link">Взяти участь</a></li>
+				<div class="footer-section">
+					<ul class="footer-list">
+						<li class="footer-list__item"><a href="#projects" class="footer-list__link">Проєкти</a></li>
+						<li class="footer-list__item"><a href="#partners" class="footer-list__link">Партнери</a></li>
+						<li class="footer-list__item"><a href="#forms" class="footer-list__link">Взяти участь</a></li>
 					</ul>
 				</div>
 		
-				<div class="footer__section">
-					<ul class="footer__list">
-						<li class="footer__item"><a href="" class="footer__list-link underline ">Політика конфіденційності</a></li>
-						<li class="footer__item"><a href="" class="footer__list-link underline ">Правила користування сайтом</a></li>
-						<li class="footer__item"><a href="" class="footer__list-link">Статут</a></li>
-						<li class="footer__item"><a href="" class="footer__list-link">Звітність</a></li>
+				<div class="footer-section">
+					<ul class="footer-list">
+						<li class="footer-list__item"><a href="" class="footer-list__link underline ">Політика конфіденційності</a></li>
+						<li class="footer-list__item"><a href="" class="footer-list__link underline ">Правила користування сайтом</a></li>
+						<li class="footer-list__item"><a href="" class="footer-list__link">Статут</a></li>
+						<li class="footer-list__item"><a href="" class="footer-list__link">Звітність</a></li>
 					</ul>
 				</div>
 		
-				<div class="footer__section">
-							<ul class="footer__list footer__list-contacts">
-								<li class="footer__item footer__item-contacts">
-									<svg class="footer__item-svg">
+				<div class="footer-section">
+							<ul class="footer-list footer-list--contacts">
+								<li class="footer-list__item footer-list__item--contacts">
+									<svg class="footer-list__icon">
 										<use href="@img/sprite.svg#phone"></use>
 									</svg>
-									<span class="footer__item-span">+38 063 628 6630</span>
+									<span class="footer-list__text">+38 063 628 6630</span>
 								</li>
-								<li class="footer__item footer__item-contacts">
-									<svg class="footer__item-svg">
+								<li class="footer-list__item footer-list__item--contacts">
+									<svg class="footer-list__icon">
 										<use href="@img/sprite.svg#phone"></use>
 									</svg>
-									<span class="footer__item-span">
+									<span class="footer-list__text">
 										+38 067 568 1788
 									</span>
 									</li>
-								<li class="footer__item footer__item-contacts">
-									<svg class="footer__item-svg">
+								<li class="footer-list__item footer-list__item--contacts">
+									<svg class="footer-list__icon">
 										<use href="@img/sprite.svg#mail"></use>
-									</svg><span class="footer__item-span">info@baza-trainee.site</span></li>
+									</svg><span class="footer-list__text">info@baza-trainee.site</span></li>
 							</ul>
 
-							<ul class="footer__list footer__list-social">
-								<li class="footer__item-social footer__item">
-									<a href="" class="footer__social-link">
-										<svg class="footer__social-link-svg">
+							<ul class="footer-list footer-list--social">
+								<li class="footer-list__item--social footer-list__item">
+									<a href="" class="footer-social-link">
+										<svg class="footer-social-link__svg">
 											<use href="@img/sprite.svg#linkedIn"></use>
 										</svg>
 									</a>
 								</li>
-								<li class="footer__item-social footer__item">
-									<a href="" class="footer__social-link">
-										<svg class="footer__social-link-svg">
+								<li class="footer-list__item--social footer-list__item">
+									<a href="" class="footer-social-link">
+										<svg class="footer-social-link__svg">
 											<use href="@img/sprite.svg#fb"></use>
 										</svg>
 									</a>
