Add countes to pj

--- a/src/html/achievements.html
+++ b/src/html/achievements.html
@@ -1,18 +1,18 @@
 <section class="achievements">
-    <div class="container">
+  <div class="container">
     <ul class="achievements__list">
-        <li class="achievements__item">
-            <p class="achievements__number">7</p>
-            <p class="achievements__text">Виконанних проєктів</p>
-        </li>
-        <li class="achievements__item">
-            <p class="achievements__number">420+</p>
-            <p class="achievements__text">Залучених учасників</p>
-        </li>
-        <li class="achievements__item">
-            <p class="achievements__number">212</p>
-            <p class="achievements__text">Працевлаштовано</p>
-        </li>
+      <li class="achievements__item">
+        <p class="achievements__number"><span counter-num="7">0</span></p>
+        <p class="achievements__text">Виконанних проєктів</p>
+      </li>
+      <li class="achievements__item">
+        <p class="achievements__number"><span counter-num="420">0</span>+</p>
+        <p class="achievements__text">Залучених учасників</p>
+      </li>
+      <li class="achievements__item">
+        <p class="achievements__number"><span counter-num="212">0</span></p>
+        <p class="achievements__text">Працевлаштовано</p>
+      </li>
     </ul>
-    </div>
+  </div>
 </section>
