--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -36,21 +36,21 @@
                             <div class="projects-section__info">
                                 <ul class="projects-section__info__list">
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                         <p>Старт проєкту</p>
                                         </div>
                                         <p>24 квітня 2023</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                         <p>Цикл проєкту</p>
                                         </div>
                                         <p>7 тижнів</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                         <p>Складність</p>
                                         </div>
@@ -130,21 +130,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
@@ -170,21 +170,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
@@ -214,21 +214,21 @@
                             <div class="projects-section__info">
                                 <ul class="projects-section__info__list">
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                         <p>Старт проєкту</p>
                                         </div>
                                         <p>24 квітня 2023</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                         <p>Цикл проєкту</p>
                                         </div>
                                         <p>7 тижнів</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                         <p>Складність</p>
                                         </div>
@@ -308,21 +308,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
@@ -348,21 +348,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
@@ -392,21 +392,21 @@
                             <div class="projects-section__info">
                                 <ul class="projects-section__info__list">
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                         <p>Старт проєкту</p>
                                         </div>
                                         <p>24 квітня 2023</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                         <p>Цикл проєкту</p>
                                         </div>
                                         <p>7 тижнів</p>
                                     </li>
                                     <li class="projects-section__info__list-item">
-                                        <div style="display: flex; align-items: center; gap: 4px;">
+                                        <div style="display: flex; align-items: center; gap: 0.4rem;">
                                             <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                         <p>Складність</p>
                                         </div>
@@ -486,21 +486,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
@@ -526,21 +526,21 @@
                         <div class="projects-section__info">
                             <ul class="projects-section__info__list">
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#start-icon"></use></svg>
                                     <p>Старт проєкту</p>
                                     </div>
                                     <p>24 квітня 2023</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#time-icon"></use></svg>
                                     <p>Цикл проєкту</p>
                                     </div>
                                     <p>7 тижнів</p>
                                 </li>
                                 <li class="projects-section__info__list-item">
-                                    <div style="display: flex; align-items: center; gap: 4px;">
+                                    <div style="display: flex; align-items: center; gap: 0.4rem;">
                                         <svg class="projects-section__info__list-item__icon"><use href="@img/sprite.svg#level-icon"></use></svg>
                                     <p>Складність</p>
                                     </div>
